# agentproject

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  mcp_server.py  pyproject.toml  tmp_answer.txt  tmp_response.json
.github/workflows/: ci.yml  online-evaluation.yml
agent/: answer_schema.py  budget.py  long_term_memory.py  memory.py  memory_index.py  planner.py  policies.py  react_agent.py  runner.py  state.py  summarizer.py  verifier.py
agent/tools/: agent_tools.py  middleware.py  registry.py  retry.py
agent/workflows/: __init__.py  report_workflow.py
api/: __init__.py  reranker_server.py  server.py
config/: agent.yml  chroma.yml  rag.yml  tool_policy.yml
deploy/: otel-collector.yaml
docs/: demo.md  interview_harness_playbook.md  interview_playbook.md  interview_playbook_v4.md  p0_p1_completion.md  rerank_engineering.md  retrieval_annotation_pipeline.md
evals/: agent_golden.jsonl  agent_offline_golden.jsonl  generation_golden.jsonl  rag_golden.jsonl  retrieval_dev_golden.jsonl  retrieval_golden.jsonl  retrieval_manifest_v1.json  retrieval_test_query_aliases_v1.jsonl
evals/annotations/: retrieval_dev_candidates_v1.jsonl  (+2 more)
mcp_adapter/: __init__.py  server.py
model/: factory.py  providers.py  router.py
observability/: __init__.py  context.py  event_bus.py  metrics.py  otel.py  tracing.py
prompts/: main_prompt.txt  rag_summarize.txt  report_prompt.txt
rag/: eval_gate.py  evaluation.py  judge.py  rag_service.py  rag_utils.py  schemas.py  vector_store.py
safety/: __init__.py  approval.py  auth.py  security.py
scripts/: benchmark_api.py  build_rerank_dev_data.py  evaluate_agent.py  evaluate_generation.py  evaluate_rag.py  evaluate_retrieval.py  generate_retrieval_golden.py  prepare_chunk_experiments.py  prompt_diff.py  split_retrieval_labels.py  tune_rerank_fusion.py  validate_retrieval_manifest.py
services/: __init__.py  approval_store.py  artifact_store.py  cache.py  circuit_breaker.py  factories.py  memory_store.py  persistence.py  postgres.py  rate_limit.py  task_queue.py  tool_data_service.py
storage/: retrieval_online_report.json
tests/: test_agent_runner.py  test_agent_state.py  test_agent_streaming.py  test_answer_verifier.py  test_answer_verifier_grounding.py  test_api.py  test_approval_flow.py  test_artifact_api.py  test_artifact_store.py  test_auth_context.py  test_backend_evidence.py  test_benchmark.py  test_bge_reranker.py  test_bm25_retriever.py  test_budget_enforcement.py  test_budget_manager.py  test_cache.py  test_circuit_breaker.py  test_distributed_backends.py  test_docs.py  test_eval_gate.py  test_eval_harness_mode.py  test_evaluate_agent.py  test_event_bus.py  test_generation_evaluation.py  test_harness_entrypoints.py  test_hybrid_retriever.py  test_judge.py  test_long_term_memory.py  test_mcp_policy.py  test_mcp_server.py  test_memory.py  test_memory_api.py  test_metrics.py  test_model_budget_middleware.py  test_model_factory_router.py  test_model_providers.py  test_model_router.py  test_observability.py  test_otel_sdk.py  (+33 more)
utils/: config_handler.py  logger_handler.py  prompt_loader.py  streaming.py
(+22 files in other folders)
