[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sweeper-agent"
version = "0.2.0"
description = "RAG and multi-tool Agent for sweeping robot customer service."
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.34",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-chroma>=0.1",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2",
    "chromadb>=0.5",
    "dashscope>=1.20",
    "pypdf>=4.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
    "ignore:`langchain-community` is being sunset:DeprecationWarning",
]

[tool.setuptools.packages.find]
include = [
    "agent*",
    "api*",
    "model*",
    "observability*",
    "rag*",
    "safety*",
    "services*",
    "utils*",
]
exclude = [
    "data*",
    "logs*",
    "prompts*",
    "config*",
    "evals*",
    "tests*",
    "docs*",
    "chroma_db*",
    "storage*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
