[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sweeper-agent"
version = "0.2.0"
description = "RAG and multi-tool Agent for sweeping robot customer service."
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.34",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-core>=0.3",
    "langchain-chroma>=0.1",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.2",
    "chromadb>=0.5",
    "dashscope>=1.20",
    "pypdf>=4.2",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "jieba>=0.42",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]
# 本地 Cross-Encoder Rerank；CI 不安装，只在有算力的环境启用
rerank = [
    "sentence-transformers>=2.7",
]
production = [
    "psycopg[binary]>=3.2,<4",
    "redis>=5,<6",
    "opentelemetry-api>=1.27,<2",
    "opentelemetry-sdk>=1.27,<2",
    "opentelemetry-exporter-otlp-proto-http>=1.27,<2",
    "opentelemetry-instrumentation-fastapi>=0.48b0,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
    "ignore:`langchain-community` is being sunset:DeprecationWarning",
]

[tool.setuptools.packages.find]
include = [
    "agent*",
    "api*",
    "model*",
    "mcp_adapter*",
    "observability*",
    "rag*",
    "safety*",
    "services*",
    "utils*",
]
exclude = [
    "data*",
    "logs*",
    "prompts*",
    "config*",
    "evals*",
    "tests*",
    "docs*",
    "chroma_db*",
    "storage*",
]

[tool.ruff]
line-length = 100
target-version = "py310"
